generated/VueloParser.js
// Generated from c:/Users/Santi/Desktop/51035/Vuelo.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import VueloListener from './VueloListener.js';
import VueloVisitor from './VueloVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class VueloParser extends antlr4.Parser {

    static grammarFileName = "Vuelo.g4";
    static literalNames = [ null, "'Gate:'", "'-'", "','", "':'", "'ON_TIME'", 
                            "'DELAYED'", "'CANCELLED'", "'NOW'" ];
    static symbolicNames = [ null, "GATE_LABEL", "GUION", "COMA", "DOS_PUNTOS", 
                             "ON_TIME", "DELAYED", "CANCELLED", "NOW", "LETRA", 
                             "DIGITO", "WS" ];
    static ruleNames = [ "vuelo", "codigo_vuelo", "aeropuerto_salida", "aeropuerto_llegada", 
                         "aeropuerto", "hora", "estado", "puerta" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = VueloParser.ruleNames;
        this.literalNames = VueloParser.literalNames;
        this.symbolicNames = VueloParser.symbolicNames;
    }



	vuelo() {
	    let localctx = new VueloContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, VueloParser.RULE_vuelo);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 16;
	        this.codigo_vuelo();
	        this.state = 17;
	        this.aeropuerto_salida();
	        this.state = 18;
	        this.match(VueloParser.GUION);
	        this.state = 19;
	        this.aeropuerto_llegada();
	        this.state = 20;
	        this.hora();
	        this.state = 21;
	        this.match(VueloParser.COMA);
	        this.state = 22;
	        this.estado();
	        this.state = 23;
	        this.match(VueloParser.COMA);
	        this.state = 24;
	        this.match(VueloParser.GATE_LABEL);
	        this.state = 25;
	        this.puerta();
	        this.state = 26;
	        this.match(VueloParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	codigo_vuelo() {
	    let localctx = new Codigo_vueloContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, VueloParser.RULE_codigo_vuelo);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 28;
	        this.match(VueloParser.LETRA);
	        this.state = 29;
	        this.match(VueloParser.LETRA);
	        this.state = 30;
	        this.match(VueloParser.DIGITO);
	        this.state = 31;
	        this.match(VueloParser.DIGITO);
	        this.state = 32;
	        this.match(VueloParser.DIGITO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aeropuerto_salida() {
	    let localctx = new Aeropuerto_salidaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, VueloParser.RULE_aeropuerto_salida);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 34;
	        this.aeropuerto();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aeropuerto_llegada() {
	    let localctx = new Aeropuerto_llegadaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, VueloParser.RULE_aeropuerto_llegada);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 36;
	        this.aeropuerto();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aeropuerto() {
	    let localctx = new AeropuertoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, VueloParser.RULE_aeropuerto);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 38;
	        this.match(VueloParser.LETRA);
	        this.state = 39;
	        this.match(VueloParser.LETRA);
	        this.state = 40;
	        this.match(VueloParser.LETRA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	hora() {
	    let localctx = new HoraContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, VueloParser.RULE_hora);
	    try {
	        this.state = 48;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 10:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 42;
	            this.match(VueloParser.DIGITO);
	            this.state = 43;
	            this.match(VueloParser.DIGITO);
	            this.state = 44;
	            this.match(VueloParser.DOS_PUNTOS);
	            this.state = 45;
	            this.match(VueloParser.DIGITO);
	            this.state = 46;
	            this.match(VueloParser.DIGITO);
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 47;
	            this.match(VueloParser.NOW);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	estado() {
	    let localctx = new EstadoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, VueloParser.RULE_estado);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 50;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 224) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	puerta() {
	    let localctx = new PuertaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, VueloParser.RULE_puerta);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this.match(VueloParser.LETRA);
	        this.state = 54; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 53;
	            this.match(VueloParser.DIGITO);
	            this.state = 56; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===10);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

VueloParser.EOF = antlr4.Token.EOF;
VueloParser.GATE_LABEL = 1;
VueloParser.GUION = 2;
VueloParser.COMA = 3;
VueloParser.DOS_PUNTOS = 4;
VueloParser.ON_TIME = 5;
VueloParser.DELAYED = 6;
VueloParser.CANCELLED = 7;
VueloParser.NOW = 8;
VueloParser.LETRA = 9;
VueloParser.DIGITO = 10;
VueloParser.WS = 11;

VueloParser.RULE_vuelo = 0;
VueloParser.RULE_codigo_vuelo = 1;
VueloParser.RULE_aeropuerto_salida = 2;
VueloParser.RULE_aeropuerto_llegada = 3;
VueloParser.RULE_aeropuerto = 4;
VueloParser.RULE_hora = 5;
VueloParser.RULE_estado = 6;
VueloParser.RULE_puerta = 7;

class VueloContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = VueloParser.RULE_vuelo;
    }

	codigo_vuelo() {
	    return this.getTypedRuleContext(Codigo_vueloContext,0);
	};

	aeropuerto_salida() {
	    return this.getTypedRuleContext(Aeropuerto_salidaContext,0);
	};

	GUION() {
	    return this.getToken(VueloParser.GUION, 0);
	};

	aeropuerto_llegada() {
	    return this.getTypedRuleContext(Aeropuerto_llegadaContext,0);
	};

	hora() {
	    return this.getTypedRuleContext(HoraContext,0);
	};

	COMA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(VueloParser.COMA);
	    } else {
	        return this.getToken(VueloParser.COMA, i);
	    }
	};


	estado() {
	    return this.getTypedRuleContext(EstadoContext,0);
	};

	GATE_LABEL() {
	    return this.getToken(VueloParser.GATE_LABEL, 0);
	};

	puerta() {
	    return this.getTypedRuleContext(PuertaContext,0);
	};

	EOF() {
	    return this.getToken(VueloParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.enterVuelo(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.exitVuelo(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof VueloVisitor ) {
	        return visitor.visitVuelo(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Codigo_vueloContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = VueloParser.RULE_codigo_vuelo;
    }

	LETRA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(VueloParser.LETRA);
	    } else {
	        return this.getToken(VueloParser.LETRA, i);
	    }
	};


	DIGITO = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(VueloParser.DIGITO);
	    } else {
	        return this.getToken(VueloParser.DIGITO, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.enterCodigo_vuelo(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.exitCodigo_vuelo(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof VueloVisitor ) {
	        return visitor.visitCodigo_vuelo(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Aeropuerto_salidaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = VueloParser.RULE_aeropuerto_salida;
    }

	aeropuerto() {
	    return this.getTypedRuleContext(AeropuertoContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.enterAeropuerto_salida(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.exitAeropuerto_salida(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof VueloVisitor ) {
	        return visitor.visitAeropuerto_salida(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Aeropuerto_llegadaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = VueloParser.RULE_aeropuerto_llegada;
    }

	aeropuerto() {
	    return this.getTypedRuleContext(AeropuertoContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.enterAeropuerto_llegada(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.exitAeropuerto_llegada(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof VueloVisitor ) {
	        return visitor.visitAeropuerto_llegada(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AeropuertoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = VueloParser.RULE_aeropuerto;
    }

	LETRA = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(VueloParser.LETRA);
	    } else {
	        return this.getToken(VueloParser.LETRA, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.enterAeropuerto(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.exitAeropuerto(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof VueloVisitor ) {
	        return visitor.visitAeropuerto(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class HoraContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = VueloParser.RULE_hora;
    }

	DIGITO = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(VueloParser.DIGITO);
	    } else {
	        return this.getToken(VueloParser.DIGITO, i);
	    }
	};


	DOS_PUNTOS() {
	    return this.getToken(VueloParser.DOS_PUNTOS, 0);
	};

	NOW() {
	    return this.getToken(VueloParser.NOW, 0);
	};

	enterRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.enterHora(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.exitHora(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof VueloVisitor ) {
	        return visitor.visitHora(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class EstadoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = VueloParser.RULE_estado;
    }

	ON_TIME() {
	    return this.getToken(VueloParser.ON_TIME, 0);
	};

	DELAYED() {
	    return this.getToken(VueloParser.DELAYED, 0);
	};

	CANCELLED() {
	    return this.getToken(VueloParser.CANCELLED, 0);
	};

	enterRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.enterEstado(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.exitEstado(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof VueloVisitor ) {
	        return visitor.visitEstado(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class PuertaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = VueloParser.RULE_puerta;
    }

	LETRA() {
	    return this.getToken(VueloParser.LETRA, 0);
	};

	DIGITO = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(VueloParser.DIGITO);
	    } else {
	        return this.getToken(VueloParser.DIGITO, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.enterPuerta(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof VueloListener ) {
	        listener.exitPuerta(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof VueloVisitor ) {
	        return visitor.visitPuerta(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




VueloParser.VueloContext = VueloContext; 
VueloParser.Codigo_vueloContext = Codigo_vueloContext; 
VueloParser.Aeropuerto_salidaContext = Aeropuerto_salidaContext; 
VueloParser.Aeropuerto_llegadaContext = Aeropuerto_llegadaContext; 
VueloParser.AeropuertoContext = AeropuertoContext; 
VueloParser.HoraContext = HoraContext; 
VueloParser.EstadoContext = EstadoContext; 
VueloParser.PuertaContext = PuertaContext; 
